Update 002 Диагностические запросы.md

--- a/005 Решения на базе PostgreSQL/Citus/005 Диагностика и оптимизация/002 Диагностические запросы.md
+++ b/005 Решения на базе PostgreSQL/Citus/005 Диагностика и оптимизация/002 Диагностические запросы.md
@@ -1,6 +1,5 @@
 ## [Использование DMV](https://docs.citusdata.com/en/v12.0/admin_guide/diagnostic_queries.html#useful-diagnostic-queries)
-### [Вычисление шарды тенанта](https://docs.citusdata.com/en/v12.0/admin_guide/diagnostic_queries.html#finding-which-shard-contains-data-for-a-specific-tenant)
-Определение местоположения при шардировании по ключу (напр тенант)
+### [Определение положения шарды для распределения по тенантам (по ключу)](https://docs.citusdata.com/en/v12.0/admin_guide/diagnostic_queries.html#finding-which-shard-contains-data-for-a-specific-tenant)
 ```
 SELECT shardid, shardstate, shardlength, nodename, nodeport, placementid
   FROM pg_dist_placement AS placement,
@@ -10,24 +9,94 @@ SELECT shardid, shardstate, shardlength, nodename, nodeport, placementid
    AND shardid = (
      SELECT get_shard_id_for_distribution_column('stores', 4)
    );
-
+```
+```
 ┌─────────┬────────────┬─────────────┬───────────┬──────────┬─────────────┐
 │ shardid │ shardstate │ shardlength │ nodename  │ nodeport │ placementid │
 ├─────────┼────────────┼─────────────┼───────────┼──────────┼─────────────┤
 │  102009 │          1 │           0 │ localhost │     5433 │           2 │
 └─────────┴────────────┴─────────────┴───────────┴──────────┴─────────────┘
 ```
-### []()
+### [Определение положения для распределения по схеме](https://docs.citusdata.com/en/v12.0/admin_guide/diagnostic_queries.html#finding-which-node-hosts-a-distributed-schema)
+Вариант 1
+```
+select schema_name, nodename, nodeport
+  from citus_shards
+  join citus_schemas cs
+    on cs.colocation_id = citus_shards.colocation_id
+ group by 1,2,3;
 ```
 ```
-### []()
+ schema_name | nodename  | nodeport
+-------------+-----------+----------
+ a           | localhost |     9701
+ b           | localhost |     9702
+ with_data   | localhost |     9702
+```
+Вариант 2
+```
+select * from citus_shards where citus_table_type = 'schema';
 ```
 ```
-### []()
+   table_name   | shardid |      shard_name       | citus_table_type | colocation_id | nodename  | nodeport | shard_size | schema_name | colocation_id | schema_size | schema_owner
+----------------+---------+-----------------------+------------------+---------------+-----------+----------+------------+-------------+---------------+-------------+--------------
+ a.cities       |  102080 | a.cities_102080       | schema           |             4 | localhost |     9701 |       8192 | a           |             4 | 128 kB      | citus
+ a.map_tags     |  102145 | a.map_tags_102145     | schema           |             4 | localhost |     9701 |      32768 | a           |             4 | 128 kB      | citus
+ a.measurement  |  102047 | a.measurement_102047  | schema           |             4 | localhost |     9701 |          0 | a           |             4 | 128 kB      | citus
+ a.my_table     |  102179 | a.my_table_102179     | schema           |             4 | localhost |     9701 |      16384 | a           |             4 | 128 kB      | citus
+ a.people       |  102013 | a.people_102013       | schema           |             4 | localhost |     9701 |      32768 | a           |             4 | 128 kB      | citus
+ a.test         |  102008 | a.test_102008         | schema           |             4 | localhost |     9701 |       8192 | a           |             4 | 128 kB      | citus
+ a.widgets      |  102146 | a.widgets_102146      | schema           |             4 | localhost |     9701 |      32768 | a           |             4 | 128 kB      | citus
+ b.test         |  102009 | b.test_102009         | schema           |             5 | localhost |     9702 |       8192 | b           |             5 | 32 kB       | citus
+ b.test_col     |  102012 | b.test_col_102012     | schema           |             5 | localhost |     9702 |      24576 | b           |             5 | 32 kB       | citus
+ with_data.test |  102180 | with_data.test_102180 | schema           |            11 | localhost |     9702 |     647168 | with_data   |            11 | 632 kB      | citus
+```
+### [Определение колонки ключа распределения](https://docs.citusdata.com/en/v12.0/admin_guide/diagnostic_queries.html#finding-the-distribution-column-for-a-table)
+```
+SELECT column_to_column_name(logicalrelid, partkey) AS dist_col_name
+  FROM pg_dist_partition
+ WHERE logicalrelid='products'::regclass;
 ```
 ```
-### []()
+┌───────────────┐
+│ dist_col_name │
+├───────────────┤
+│ store_id      │
+└───────────────┘
 ```
+### [Блокировки](https://docs.citusdata.com/en/v12.0/admin_guide/diagnostic_queries.html#detecting-locks)
+```
+SELECT * FROM citus_lock_waits;
+```
+```
+-[ RECORD 1 ]-------------------------+--------------------------------------
+waiting_gpid                          | 10000011981
+blocking_gpid                         | 10000011979
+blocked_statement                     | UPDATE numbers SET j = 3 WHERE i = 1;
+current_statement_in_blocking_process | UPDATE numbers SET j = 2 WHERE i = 1;
+waiting_nodeid                        | 1
+blocking_nodeid                       | 1
+```
+Подробнее про [мониторинг рапределенной активности](https://docs.citusdata.com/en/v12.0/develop/api_metadata.html#distributed-query-activity)
+### [Информация о шардах](https://docs.citusdata.com/en/v12.0/admin_guide/diagnostic_queries.html#querying-the-size-of-your-shards)
+[Подробнее](https://docs.citusdata.com/en/v12.0/develop/api_metadata.html#shard-information-view)
+```
+SELECT * FROM citus_shards;
+```
+```
+.
+ table_name | shardid | shard_name   | citus_table_type | colocation_id | nodename  | nodeport | shard_size
+------------+---------+--------------+------------------+---------------+-----------+----------+------------
+ dist       |  102170 | dist_102170  | distributed      |            34 | localhost |     9701 |   90677248
+ dist       |  102171 | dist_102171  | distributed      |            34 | localhost |     9702 |   90619904
+ dist       |  102172 | dist_102172  | distributed      |            34 | localhost |     9701 |   90701824
+ dist       |  102173 | dist_102173  | distributed      |            34 | localhost |     9702 |   90693632
+ ref        |  102174 | ref_102174   | reference        |             2 | localhost |     9701 |       8192
+ ref        |  102174 | ref_102174   | reference        |             2 | localhost |     9702 |       8192
+ dist2      |  102175 | dist2_102175 | distributed      |            34 | localhost |     9701 |     933888
+ dist2      |  102176 | dist2_102176 | distributed      |            34 | localhost |     9702 |     950272
+ dist2      |  102177 | dist2_102177 | distributed      |            34 | localhost |     9701 |     942080
+ dist2      |  102178 | dist2_102178 | distributed      |            34 | localhost |     9702 |     933888
 ```
 ### []()
 ```
