Update 002 Диагностические запросы.md

--- a/005 Решения на базе PostgreSQL/Citus/005 Диагностика и оптимизация/002 Диагностические запросы.md
+++ b/005 Решения на базе PostgreSQL/Citus/005 Диагностика и оптимизация/002 Диагностические запросы.md
@@ -98,15 +98,161 @@ SELECT * FROM citus_shards;
  dist2      |  102177 | dist2_102177 | distributed      |            34 | localhost |     9701 |     942080
  dist2      |  102178 | dist2_102178 | distributed      |            34 | localhost |     9702 |     933888
 ```
-### []()
+### [Размер таблиц (включая индексы)](https://docs.citusdata.com/en/v12.0/admin_guide/diagnostic_queries.html#querying-the-size-of-all-distributed-tables)
+[Подробнее](https://docs.citusdata.com/en/v12.0/admin_guide/table_management.html#table-size)
+```
+SELECT table_name, table_size
+  FROM citus_tables;
 ```
 ```
-### []()
+┌───────────────┬────────────┐
+│  table_name   │ table_size │
+├───────────────┼────────────┤
+│ github_users  │ 39 MB      │
+│ github_events │ 98 MB      │
+└───────────────┴────────────┘
+```
+citus_relation_size(relation_name)
+```
+Size of actual data in table (the “main fork”).
+A relation can be the name of a table or an index.
+```
+citus_table_size(relation_name)
+```
+citus_relation_size plus:
+size of free space map
+size of visibility map
+```
+citus_total_relation_size(relation_name)
+```
+citus_table_size plus:
+size of indices
+```
+ex
+```
+SELECT logicalrelid AS name,
+       pg_size_pretty(citus_table_size(logicalrelid)) AS size
+  FROM pg_dist_partition;
 ```
 ```
-### []()
+┌───────────────┬───────┐
+│     name      │ size  │
+├───────────────┼───────┤
+│ github_users  │ 39 MB │
+│ github_events │ 37 MB │
+└───────────────┴───────┘
+```
+### [Неиспользуемые индексы](https://docs.citusdata.com/en/v12.0/admin_guide/diagnostic_queries.html#identifying-unused-indices)
+```
+SELECT *
+FROM run_command_on_shards('my_distributed_table',
+$cmd$
+  SELECT array_agg(a) as infos
+  FROM (
+    SELECT (
+      schemaname || '.' || relname || '##' || indexrelname || '##'
+                 || pg_size_pretty(pg_relation_size(i.indexrelid))::text
+                 || '##' || idx_scan::text
+    ) AS a
+    FROM  pg_stat_user_indexes ui
+      JOIN  pg_index i ON ui.indexrelid = i.indexrelid
+    WHERE NOT indisunique
+      AND   idx_scan < 50
+      AND   pg_relation_size(relid) > 5 * 8192
+      AND   (schemaname || '.' || relname)::regclass = '%s'::regclass
+    ORDER BY pg_relation_size(i.indexrelid) / NULLIF(idx_scan, 0) DESC nulls first,
+             pg_relation_size(i.indexrelid) DESC
+  ) sub
+$cmd$);
 ```
 ```
-### []()
+┌─────────┬─────────┬───────────────────────────────────────────────────────────────────────┐
+│ shardid │ success │                            result                                     │
+├─────────┼─────────┼───────────────────────────────────────────────────────────────────────┤
+│  102008 │ t       │                                                                       │
+│  102009 │ t       │ {"public.my_distributed_table_102009##stupid_index_102009##28 MB##0"} │
+│  102010 │ t       │                                                                       │
+│  102011 │ t       │                                                                       │
+└─────────┴─────────┴───────────────────────────────────────────────────────────────────────┘
 ```
+### [Количество активных соединений](https://docs.citusdata.com/en/v12.0/admin_guide/diagnostic_queries.html#monitoring-client-connection-count)
+```
+SELECT state, count(*) FROM pg_stat_activity GROUP BY state;
+```
+```
+┌────────┬───────┐
+│ state  │ count │
+├────────┼───────┤
+│ active │     3 │
+│ ∅      │     1 │
+└────────┴───────┘
+```
+### [информация об активных соединениях](https://docs.citusdata.com/en/v12.0/admin_guide/diagnostic_queries.html#active-queries)
+В целом
+```
+SELECT global_pid, query, state FROM citus_stat_activity WHERE state != 'idle';
+```
+Типы ожиданий
+```
+SELECT wait_event || ':' || wait_event_type AS type, count(*) AS number_of_occurences
+  FROM pg_stat_activity
+WHERE state != 'idle'
+GROUP BY wait_event, wait_event_type
+ORDER BY number_of_occurences DESC;
+```
+```
+┌─────────────────┬──────────────────────┐
+│      type       │ number_of_occurences │
+├─────────────────┼──────────────────────┤
+│ ∅               │                    1 │
+│ PgSleep:Timeout │                    1 │
+└─────────────────┴──────────────────────┘
+```
+### [использование индексов](https://docs.citusdata.com/en/v12.0/admin_guide/diagnostic_queries.html#index-hit-rate)
+```
+-- on coordinator
+SELECT 100 * (sum(idx_blks_hit) - sum(idx_blks_read)) / sum(idx_blks_hit) AS index_hit_rate
+  FROM pg_statio_user_indexes;
+
+-- on workers
+SELECT nodename, result as index_hit_rate
+FROM run_command_on_workers($cmd$
+  SELECT 100 * (sum(idx_blks_hit) - sum(idx_blks_read)) / sum(idx_blks_hit) AS index_hit_rate
+    FROM pg_statio_user_indexes;
+$cmd$);
+```
+```
+┌───────────┬────────────────┐
+│ nodename  │ index_hit_rate │
+├───────────┼────────────────┤
+│ 10.0.0.16 │ 96.0           │
+│ 10.0.0.20 │ 98.0           │
+└───────────┴────────────────┘
+```
+### [Попадание в кэш](https://docs.citusdata.com/en/v12.0/admin_guide/diagnostic_queries.html#cache-hit-rate)
+Соотношение чтений с диска к чтениям из памяти (норма > 90%)
+[Описание полей](https://www.postgresql.org/docs/current/monitoring-stats.html#MONITORING-PG-STATIO-ALL-TABLES-VIEW)
+```
+-- on coordinator
+SELECT
+  sum(heap_blks_read) AS heap_read,
+  sum(heap_blks_hit)  AS heap_hit,
+  100 * sum(heap_blks_hit) / (sum(heap_blks_hit) + sum(heap_blks_read)) AS cache_hit_rate
+FROM
+  pg_statio_user_tables;
+
+-- on workers
+SELECT nodename, result as cache_hit_rate
+FROM run_command_on_workers(
+$cmd$
+  SELECT 100 * sum(heap_blks_hit) / (sum(heap_blks_hit) + sum(heap_blks_read)) AS cache_hit_rate
+  FROM pg_statio_user_tables;
+$cmd$);
+```
+```
+┌───────────┬──────────┬─────────────────────┐
+│ heap_read │ heap_hit │   cache_hit_rate    │
+├───────────┼──────────┼─────────────────────┤
+│         1 │      132 │ 99.2481203007518796 │
+└───────────┴──────────┴─────────────────────┘
 ```
