--- a/005 Решения на базе PostgreSQL/Citus/005 Диагностика и оптимизация/002 Диагностические запросы.md
+++ b/005 Решения на базе PostgreSQL/Citus/005 Диагностика и оптимизация/002 Диагностические запросы.md
@@ -187,7 +187,7 @@ SELECT state, count(*) FROM pg_stat_activity GROUP BY state;
 │ ∅      │     1 │
 └────────┴───────┘
 ```
-### [информация об активных соединениях](https://docs.citusdata.com/en/v12.0/admin_guide/diagnostic_queries.html#active-queries)
+### [Информация об активных соединениях](https://docs.citusdata.com/en/v12.0/admin_guide/diagnostic_queries.html#active-queries)
 В целом
 ```
 SELECT global_pid, query, state FROM citus_stat_activity WHERE state != 'idle';
@@ -208,7 +208,7 @@ ORDER BY number_of_occurences DESC;
 │ PgSleep:Timeout │                    1 │
 └─────────────────┴──────────────────────┘
 ```
-### [использование индексов](https://docs.citusdata.com/en/v12.0/admin_guide/diagnostic_queries.html#index-hit-rate)
+### [Использование индексов](https://docs.citusdata.com/en/v12.0/admin_guide/diagnostic_queries.html#index-hit-rate)
 ```
 -- on coordinator
 SELECT 100 * (sum(idx_blks_hit) - sum(idx_blks_read)) / sum(idx_blks_hit) AS index_hit_rate
