Update Буферный кэш и журнал.md

--- a/001 Администрирование/005 Журналирование/Буферный кэш и журнал.md
+++ b/001 Администрирование/005 Журналирование/Буферный кэш и журнал.md
@@ -6,3 +6,4 @@
 > * Журнал в идеале должен писаться на свой отдельный диск.
 > * На этом диске должны быть убраны все возможные точки кэширования - на дисковом массиве, самих дисках и т.д.
 
+Кроме того, сам журнал может писаться в двух режимах, управляемых из PG - **синхронный и асинхронный** (соотв гарантированный commit или немедленный). Производительность второго существенно выше, но запись там осуществляется отдельным сервисом (walwriter) и уже не защищена от аварийных сбоев.
