Update Буферный кэш и журнал.md

--- a/001 Администрирование/005 Журналирование/Буферный кэш и журнал.md
+++ b/001 Администрирование/005 Журналирование/Буферный кэш и журнал.md
@@ -1,4 +1,5 @@
-## [WAL](https://www.youtube.com/watch?v=3EactzfMjOs&list=PLaFqU3KCWw6LPcuYVymLcXl3muC45mu3e&index=8)
+#### [Презентация](https://www.youtube.com/watch?v=3EactzfMjOs&list=PLaFqU3KCWw6LPcuYVymLcXl3muC45mu3e&index=8)
+## WAL
 Изменения данных изначально фиксируются в кэше. При сбое данные из кэша не записываются на диск.
 Для того, чтобы восстановиться после сбоя, ведется журнал предзаписи. Журнал должен гарантированно записаться.
 
@@ -7,3 +8,6 @@
 > * На этом диске должны быть убраны все возможные точки кэширования - на дисковом массиве, самих дисках и т.д.
 
 Кроме того, сам журнал может писаться в двух режимах, управляемых из PG - **синхронный и асинхронный** (соотв гарантированный commit или немедленный). Производительность второго существенно выше, но запись там осуществляется отдельным сервисом (walwriter) и уже не защищена от аварийных сбоев.
+
+## Bgwriter
+Сбрасывает асинхронным фоном грязные странички на диск для возможности их последующего быстрого вытеснения в случае необходимости.
