Update Буферный кэш и журнал.md

--- a/001 Администрирование/005 Журналирование/Буферный кэш и журнал.md
+++ b/001 Администрирование/005 Журналирование/Буферный кэш и журнал.md
@@ -13,9 +13,9 @@
 Сбрасывает асинхронным фоном грязные странички на диск для возможности их последующего быстрого вытеснения в случае необходимости.
 
 ## Уровни журналирования
-* Минимальный
-  >  Только восстановление.
-* Реплика
-  >  Возможность передачи доп информации для восстановления данных на реплике.
-* Логический
-  >  Логирование информации о построчных операциях.
+#### Минимальный
+Только восстановление.
+#### Реплика
+Возможность передачи доп информации для восстановления данных на реплике.
+#### Логический
+Логирование информации о построчных операциях.
