Update Буферный кэш и журнал.md

--- a/001 Администрирование/005 Журналирование/Буферный кэш и журнал.md
+++ b/001 Администрирование/005 Журналирование/Буферный кэш и журнал.md
@@ -19,3 +19,9 @@
 Возможность передачи доп информации для восстановления данных на реплике.
 #### Логический
 Логирование информации о построчных операциях.
+
+## Режимы остановки
+#### Fast
+Гарантированно сбрасываем данные буферного кэша на диск.
+#### Immediate
+Контрольная точка не выполняется и данные кэша теряются.
