Update Базы данных и схемы.md

--- a/001 Администрирование/002 Структура данных/Базы данных и схемы.md
+++ b/001 Администрирование/002 Структура данных/Базы данных и схемы.md
@@ -5,5 +5,8 @@
 Кроме того, создание базы с кодировкой, отличной от умолчания, возможно только с этой пустой базы.
 #### template1
 template1 = model. Здесь можно создавать объекты. которые будут автоматически клонироваться при создании каждой новой базы.
+Расширения также клонируются.
 #### postgres
 Используется по умолчанию всеми сервисами для первичного соединения.
+
+> При создании базы данных можно указать имя шаблона, с которого будут клонироваться все объекты.
