Update Базы данных и схемы.md

--- a/001 Администрирование/002 Структура данных/Базы данных и схемы.md
+++ b/001 Администрирование/002 Структура данных/Базы данных и схемы.md
@@ -10,3 +10,39 @@ template1 = model. Здесь можно создавать объекты. ко
 Используется по умолчанию всеми сервисами для первичного соединения.
 
 > При создании базы данных можно указать имя шаблона, с которого будут клонироваться все объекты.
+
+## Схемы
+Посмотреть схемы и таблички
+```
+\dn
+\dt
+```
+перенести табличку в другую схему
+```
+ALTER TABLE t SET SHEMA app;
+```
+### Путь поиска
+Определяется в search_path.
+Реальное значение (с учетом исключаемых путей) - current_schemas.
+По умолчанию объекты создаются в public.
+Путь поиска начинается с pg_catalog, затем public.
+Если мы создаем схему, соответствующую имени пользователя (логину ОС), то она становится первой по умолчанию перед pg_catalog и public.
+### Установка
+```
+set search_path = public, app;
+alter database db set search_path = public, app;
+```
+## Временные таблицы
+Не логируются и не кэшируются в глобальном кэше. Но кэшируются в локальном.
+Создаются в специальных схемах **pg_temp_n**.
+Обращение происходит по пути pg_temp.tmp_table.
+> Для пути поиска добавляется в самое начало. Если происходит замещение по имени таблицы, находящейся в рабочей схеме, то мы ее больше не увидим в каталоге \dt.
+
+Создание
+```
+create temp table t...
+```
+
+
+
+
