--- a/001 Администрирование/002 Структура данных/Базы данных и схемы.md
+++ b/001 Администрирование/002 Структура данных/Базы данных и схемы.md
@@ -32,8 +32,10 @@ ALTER TABLE t SET SHEMA app;
 set search_path = public, app;
 alter database db set search_path = public, app;
 ```
-## Временные таблицы
+### Временные таблицы
 Не логируются и не кэшируются в глобальном кэше. Но кэшируются в локальном.
+> За кэширование в локальном кэше отвечает temp_buffers, которые по сути аналогичен work_mem в глобальном кэше. Сильно большим ставить не рекомендуют, ибо касается только текущей сессии.
+
 Создаются в специальных схемах **pg_temp_n**.
 Обращение происходит по пути pg_temp.tmp_table.
 > Для пути поиска добавляется в самое начало. Если происходит замещение по имени таблицы, находящейся в рабочей схеме, то мы ее больше не увидим в каталоге \dt.
@@ -42,7 +44,9 @@ alter database db set search_path = public, app;
 ```
 create temp table t...
 ```
-
+Время жизни можно установить до конца сеанса или до конца транзакции.
+### Удаление
+Можно удалить сразу со всеми включенными объектами (опция CASCADE).
 
 
 
