Update Базы данных и схемы.md

--- a/001 Администрирование/002 Структура данных/Базы данных и схемы.md
+++ b/001 Администрирование/002 Структура данных/Базы данных и схемы.md
@@ -34,7 +34,7 @@ alter database db set search_path = public, app;
 ```
 ### Временные таблицы
 Не логируются и не кэшируются в глобальном кэше. Но кэшируются в локальном.
-> За кэширование в локальном кэше отвечает temp_buffers, которые по сути аналогичен work_mem в глобальном кэше. Сильно большим ставить не рекомендуют, ибо касается только текущей сессии.
+> За кэширование в локальном кэше отвечает **temp_buffers**, которые по сути аналогичен work_mem в глобальном кэше. Сильно большим ставить не рекомендуют, ибо касается только текущей сессии.
 
 Создаются в специальных схемах **pg_temp_n**.
 Обращение происходит по пути pg_temp.tmp_table.
