Update Базы данных и схемы.md

--- a/001 Администрирование/002 Структура данных/Базы данных и схемы.md
+++ b/001 Администрирование/002 Структура данных/Базы данных и схемы.md
@@ -47,6 +47,24 @@ create temp table t...
 Время жизни можно установить до конца сеанса или до конца транзакции.
 ### Удаление
 Можно удалить сразу со всеми включенными объектами (опция CASCADE).
+### Системный каталог
+**pg_catalog** или **information_schema** (стандарт SQL). Внутри psql соотв **\d**.
+pg_catalog располагается внутри каждой базы данных и содержит описание ее объектов.
+```
+select * from pg_database where datname = 'dbname' \gx -- списрок баз
+select * from pg_namespace where nspname = 'public' \gx -- пространства
+select * from pg_class where relname = '^(emp|top).*'; -- отношения (таблицы, индексы, представления, последовательности и т.п.) начинающиеся либо на emp либо на top
+select * from pg_table (pg_views); -- одна из оберток над pg_class. выводящая имена вместо идентификаторов
 
+-- psql
+\dt -- tables
+\dv public.* -- views filtered by seacrh mask
+\dtvis -- tables, indexes, views and sequences
+\dt+ -- with additional info
+\d object_name -- common object info
+\d+ object_name -- with additional info (ex - select text for view)
+\dfS pg*size -- system functions by pattern
+\sf pg_catalog.pg_database_size(oid) -- show function internals
+```
 
 
