--- a/001 Администрирование/010 Задачи администрирования/Полезные скрипты.md
+++ b/001 Администрирование/010 Задачи администрирования/Полезные скрипты.md
@@ -6,3 +6,9 @@
 \dt employees
 \unset ECHO_HIDDEN
 ```
+#### Приведение к типу regclass
+```
+select * from pg_attribute where attrelid = 'employees'::regclass
+где
+'employees'::regclass = (select oid from pg_regclass where relname = 'employees')
+```
