--- a/001 Администрирование/010 Задачи администрирования/Полезные скрипты.md
+++ b/001 Администрирование/010 Задачи администрирования/Полезные скрипты.md
@@ -6,6 +6,7 @@
 \dt employees
 \unset ECHO_HIDDEN
 ```
+## Макросы
 #### Приведение к типу regclass
 ```
 select * from pg_attribute where attrelid = 'employees'::regclass
