--- a/001 Администрирование/010 Задачи администрирования/Полезные скрипты.md
+++ b/001 Администрирование/010 Задачи администрирования/Полезные скрипты.md
@@ -13,3 +13,11 @@ select * from pg_attribute where attrelid = 'employees'::regclass
 где
 'employees'::regclass = (select oid from pg_regclass where relname = 'employees')
 ```
+#### Приведение к типу regtype
+```
+select atttypeid::regtype from pg_attribute
+```
+#### Список regtypes
+```
+\dT reg*
+```
