--- a/001 Администрирование/002 Структура данных/Табличные пространства.md
+++ b/001 Администрирование/002 Структура данных/Табличные пространства.md
@@ -1,1 +1,8 @@
-
+[Презентация](https://www.youtube.com/watch?v=uPfM74fKm9o&list=PLaFqU3KCWw6LPcuYVymLcXl3muC45mu3e&index=11)
+## Общее
+Табличные пространства - способ физической организации данных.
+#### Табличное пространство pg_global
+Общее пространство для всего кластера. Там находятся объекты системного каталога, видимые всем базам кластера.
+#### Табличное пространство pg_default
+Аналог PRIMARY.
+На самом деле можно также создать свое табличное пространство и назначить его по умолчанию.
