--- a/001 Администрирование/002 Структура данных/Табличные пространства.md
+++ b/001 Администрирование/002 Структура данных/Табличные пространства.md
@@ -1,8 +1,78 @@
 [Презентация](https://www.youtube.com/watch?v=uPfM74fKm9o&list=PLaFqU3KCWw6LPcuYVymLcXl3muC45mu3e&index=11)
 ## Общее
-Табличные пространства - способ физической организации данных.
+Табличные пространства - способ физической организации данных. Каталог, находящейся где-либо на файловой системе.
 #### Табличное пространство pg_global
 Общее пространство для всего кластера. Там находятся объекты системного каталога, видимые всем базам кластера.
+> PGDATA/global/
+
 #### Табличное пространство pg_default
 Аналог PRIMARY.
+> PGDATA/base/
+
+#### Пользовательское табличное пространство
 На самом деле можно также создать свое табличное пространство и назначить его по умолчанию.
+При создании пользовательского табличного пространства, создается символическаля ссылка в каталоге
+> PGDATA/table_space/tsoid -> /table_space_path/ver/dboid/
+
+#### Мониторинг
+```
+-- Список
+select * from pg_tablespace
+-- Размер таблички
+select pg_size_pretty(pg_table_size('table'));
+-- Список в psql
+\db
+```
+#### Создание табличного пространства
+```
+sudo mkdir /path..
+sudo chown postgres /path..
+-- psql
+CREATE TABLESPACE ts LOCATION /path..
+\db
+\db+
+```
+> Одно табличное пространство может использоваться несколькими базами данных.
+
+#### Создание базы с табличным пространством по умолчанию
+```
+CREATE DATABASE db TABLSPACE ts;
+```
+#### Переназначение базе табличного пространства по умолчанию
+> Все объекти системного каталога переедут в новое табличное пространство
+
+```
+ALTER DATABASE db SET TABLESPACE pg_default;
+```
+#### Создание объекта в пользовательском табличном пространстве 
+```
+CREATE TABLE t1 () TABLESPACE ts;
+select tablemname, tablespace from pg_tables; -- tablespace пусто = tablespace по умолчанию
+```
+#### Смена табличного пространства
+В отличие от схемы, смена табличного пространства ведет к физической смене местоположения файлов (копирование).
+```
+ALTER TABLE t SET TABLSPACE table_space;
+ALTER TABLE ALL IN TABLESPACE ts_1 SET TABLSPACE ts_2;
+```
+#### Удаление табличного пространства
+Удалить каскадом, в отличие от схемы, нельзя. Там могут объекты разных баз.
+```
+-- Идентификатор пространства
+select oid from pg_tablespace where spcname = 'ts';
+-- Имена баз
+select datname
+from pg_database
+where oid in (select pg_tablespace_databases(select oid from pg_tablespace where spcname = 'ts'))
+-- Переключаемся в каждую базу и ищем объекты
+select relnamespace::regnamespace, * from pg_class where reltablespace = (select oid from pg_tablespace where spcname = 'ts')
+-- Чистим
+DROP TABLE
+-- Перемещаем системный каталог
+ALTER DATABASE db SET TABLESPACE pg_default;
+-- По завершении удаляем пустое пользовательское пространство
+DROP TABLESPACE ts;
+```
+
+
+
