--- a/001 Администрирование/010 Задачи администрирования/Полезные скрипты.md
+++ b/001 Администрирование/010 Задачи администрирования/Полезные скрипты.md
@@ -21,3 +21,8 @@ select atttypeid::regtype from pg_attribute
 ```
 \dT reg*
 ```
+## Системная информация
+#### Путь до основного файла таблицы
+```
+select pg_relation_filepath('table');
+```
