--- a/001 Администрирование/010 Задачи администрирования/Полезные скрипты.md
+++ b/001 Администрирование/010 Задачи администрирования/Полезные скрипты.md
@@ -22,7 +22,7 @@ select atttypeid::regtype from pg_attribute
 \dT reg*
 ```
 ## Системная информация
-#### Путь до основного файла таблицы
+#### Путь до основного файла таблицы относительно PGDATA
 ```
 select pg_relation_filepath('table');
 ```
