--- a/001 Администрирование/002 Структура данных/Табличные пространства.md
+++ b/001 Администрирование/002 Структура данных/Табличные пространства.md
@@ -73,6 +73,26 @@ ALTER DATABASE db SET TABLESPACE pg_default;
 -- По завершении удаляем пустое пользовательское пространство
 DROP TABLESPACE ts;
 ```
+## Низкоуровневое представление
+Каждый файл состоит из трех слоев (fork) - main (основный данные), init(заглушка, только для нежурналируемых таблиц) fsm (карта свободного пространства), vm (карта видимости).
+Каждый слой состоит из 1Гб сегментов. При достижении размера в 1ГБ файл (N) финализируется и создается следующий  и т.д. (N.1, N.2, ...N.N).
+>Размер сегмента можно поменять при компиляции.
+
+```
+pg_relation_size -- показывает общий размер слоя (все сегменты)
+```
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
