--- a/001 Администрирование/010 Задачи администрирования/Полезные скрипты.md
+++ b/001 Администрирование/010 Задачи администрирования/Полезные скрипты.md
@@ -29,3 +29,15 @@ select pg_relation_filepath('table');
 select oid from pg_database;
 select relfilenode from pg_class where relname = 'table';
 ```
+## PSQL
+```
+\d object_name -- общая информация по объекту
+\d+ object_name -- дополнительная информация по объекту (ex - select text for view)
+\d table_name -- список объектов таблицы. включая индексы
+\dn -- схемы
+\dt -- таблички
+\dv public.* -- views filtered by seacrh mask
+\dtvis -- tables, indexes, views and sequences
+\dfS pg*size -- system functions by pattern
+\sf pg_catalog.pg_database_size(oid) -- show function internals
+```
