--- a/001 Администрирование/010 Задачи администрирования/Полезные скрипты.md
+++ b/001 Администрирование/010 Задачи администрирования/Полезные скрипты.md
@@ -40,4 +40,9 @@ select relfilenode from pg_class where relname = 'table';
 \dtvis -- tables, indexes, views and sequences
 \dfS pg*size -- system functions by pattern
 \sf pg_catalog.pg_database_size(oid) -- show function internals
+
+-- Вывод текста системной функции
+\set ECHO_HIDDEN on
+\dt employees
+\unset ECHO_HIDDEN
 ```
