--- a/001 Администрирование/010 Задачи администрирования/Полезные скрипты.md
+++ b/001 Администрирование/010 Задачи администрирования/Полезные скрипты.md
@@ -25,7 +25,7 @@ select atttypeid::regtype from pg_attribute
 #### Путь до основного файла таблицы относительно PGDATA
 ```
 select pg_relation_filepath('table');
--- состовляющие пути
+-- составляющие пути
 select oid from pg_database;
 select relfilenode from pg_class where relname = 'table';
 ```
