--- a/001 Администрирование/002 Структура данных/Табличные пространства.md
+++ b/001 Администрирование/002 Структура данных/Табличные пространства.md
@@ -76,14 +76,19 @@ DROP TABLESPACE ts;
 ## Низкоуровневое представление
 Каждый файл состоит из трех слоев (fork) - main (основный данные), init(заглушка, только для нежурналируемых таблиц) fsm (карта свободного пространства), vm (карта видимости).
 Каждый слой состоит из 1Гб сегментов. При достижении размера в 1ГБ файл (N) финализируется и создается следующий  и т.д. (N.1, N.2, ...N.N).
->Размер сегмента можно поменять при компиляции.
+> Размер сегмента можно поменять при компиляции.
 
 ```
 pg_relation_size -- показывает общий размер слоя (все сегменты)
 ```
+[Путь до файла объекта](https://github.com/AV-ghub/PostgreSQL/blob/main/001%20%D0%90%D0%B4%D0%BC%D0%B8%D0%BD%D0%B8%D1%81%D1%82%D1%80%D0%B8%D1%80%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D0%B5/010%20%D0%97%D0%B0%D0%B4%D0%B0%D1%87%D0%B8%20%D0%B0%D0%B4%D0%BC%D0%B8%D0%BD%D0%B8%D1%81%D1%82%D1%80%D0%B8%D1%80%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D1%8F/%D0%9F%D0%BE%D0%BB%D0%B5%D0%B7%D0%BD%D1%8B%D0%B5%20%D1%81%D0%BA%D1%80%D0%B8%D0%BF%D1%82%D1%8B.md#%D0%BF%D1%83%D1%82%D1%8C-%D0%B4%D0%BE-%D0%BE%D1%81%D0%BD%D0%BE%D0%B2%D0%BD%D0%BE%D0%B3%D0%BE-%D1%84%D0%B0%D0%B9%D0%BB%D0%B0-%D1%82%D0%B0%D0%B1%D0%BB%D0%B8%D1%86%D1%8B-%D0%BE%D1%82%D0%BD%D0%BE%D1%81%D0%B8%D1%82%D0%B5%D0%BB%D1%8C%D0%BD%D0%BE-pgdata)
 
-
-
+Индекс файла также можно посмотреть
+```
+\d t
+select pg_relation_filepath('t_pkey');
+```
+У индекса не бывает vm (не хранит версии строк), но бывает fsm.
 
 
 
