--- a/001 Администрирование/010 Задачи администрирования/Полезные скрипты.md
+++ b/001 Администрирование/010 Задачи администрирования/Полезные скрипты.md
@@ -21,13 +21,17 @@ select atttypeid::regtype from pg_attribute
 ```
 \dT reg*
 ```
-## Системная информация
+## Системная информация PGSQL
 #### Путь до основного файла таблицы относительно PGDATA
 ```
 select pg_relation_filepath('table');
 -- составляющие пути
 select oid from pg_database;
 select relfilenode from pg_class where relname = 'table';
+```
+#### Получить имя последовательности
+```
+select pg_relation_filepath(pg_get_serial_sequence('t', 'id'))
 ```
 ## PSQL
 ```
