--- a/001 Администрирование/010 Задачи администрирования/Полезные скрипты.md
+++ b/001 Администрирование/010 Задачи администрирования/Полезные скрипты.md
@@ -33,6 +33,21 @@ select relfilenode from pg_class where relname = 'table';
 ```
 select pg_relation_filepath(pg_get_serial_sequence('t', 'id'))
 ```
+#### Получить объекты по имени файла
+Расширение oid2name
+```
+/usr/lib/postgresql/13/bin/oid2name [-d dbname][-d dbname -s]
+-- имя файла по имени таблицы
+/usr/lib/postgresql/13/bin/oid2name -d dbname -t tablename
+-- имя таблицы по имени файла
+/usr/lib/postgresql/13/bin/oid2name -d dbname -f 16657
+```
+#### Получить размер конкретных слоев
+```
+select pg_relation_size('t', 'main') main,
+       pg_relation_size('t', 'vm') vm,
+       pg_relation_size('t', 'fsm') fsm
+```
 ## PSQL
 ```
 \d object_name -- общая информация по объекту
