--- a/001 Администрирование/010 Задачи администрирования/Полезные скрипты.md
+++ b/001 Администрирование/010 Задачи администрирования/Полезные скрипты.md
@@ -48,6 +48,12 @@ select pg_relation_size('t', 'main') main,
        pg_relation_size('t', 'vm') vm,
        pg_relation_size('t', 'fsm') fsm
 ```
+#### Размер таблицы
+```
+pg_table_size - тфблица + toast
+pg_indexes_size - только индексы
+pg_total_relation_sizr - все вместе
+```
 ## PSQL
 ```
 \d object_name -- общая информация по объекту
