--- a/001 Администрирование/010 Задачи администрирования/Полезные скрипты.md
+++ b/001 Администрирование/010 Задачи администрирования/Полезные скрипты.md
@@ -53,7 +53,7 @@ select pg_relation_size('t', 'main') main,
 -- сюда можно подставить не только имя таблицы, но и имя конкретного индекса
 pg_table_size - таблица + toast
 pg_indexes_size - только индексы
-pg_total_relation_sizr - все вместе
+pg_total_relation_size - все вместе
 ```
 ## PSQL
 ```
