--- a/001 Администрирование/002 Структура данных/Табличные пространства.md
+++ b/001 Администрирование/002 Структура данных/Табличные пространства.md
@@ -94,7 +94,32 @@ select pg_relation_filepath('t_pkey');
 
 [Получить размер конкретных слоев](https://github.com/AV-ghub/PostgreSQL/blob/main/001%20%D0%90%D0%B4%D0%BC%D0%B8%D0%BD%D0%B8%D1%81%D1%82%D1%80%D0%B8%D1%80%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D0%B5/010%20%D0%97%D0%B0%D0%B4%D0%B0%D1%87%D0%B8%20%D0%B0%D0%B4%D0%BC%D0%B8%D0%BD%D0%B8%D1%81%D1%82%D1%80%D0%B8%D1%80%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D1%8F/%D0%9F%D0%BE%D0%BB%D0%B5%D0%B7%D0%BD%D1%8B%D0%B5%20%D1%81%D0%BA%D1%80%D0%B8%D0%BF%D1%82%D1%8B.md#%D0%BF%D0%BE%D0%BB%D1%83%D1%87%D0%B8%D1%82%D1%8C-%D1%80%D0%B0%D0%B7%D0%BC%D0%B5%D1%80-%D0%BA%D0%BE%D0%BD%D0%BA%D1%80%D0%B5%D1%82%D0%BD%D1%8B%D1%85-%D1%81%D0%BB%D0%BE%D0%B5%D0%B2)
 
+[Размер таблицы](https://github.com/AV-ghub/PostgreSQL/blob/main/001%20%D0%90%D0%B4%D0%BC%D0%B8%D0%BD%D0%B8%D1%81%D1%82%D1%80%D0%B8%D1%80%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D0%B5/010%20%D0%97%D0%B0%D0%B4%D0%B0%D1%87%D0%B8%20%D0%B0%D0%B4%D0%BC%D0%B8%D0%BD%D0%B8%D1%81%D1%82%D1%80%D0%B8%D1%80%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D1%8F/%D0%9F%D0%BE%D0%BB%D0%B5%D0%B7%D0%BD%D1%8B%D0%B5%20%D1%81%D0%BA%D1%80%D0%B8%D0%BF%D1%82%D1%8B.md#%D1%80%D0%B0%D0%B7%D0%BC%D0%B5%D1%80-%D1%82%D0%B0%D0%B1%D0%BB%D0%B8%D1%86%D1%8B)
 
+#### TOAST
+Бинарные данные хранятся также за пределами строки в отдельной структуре, нарезанной на чанки.
+Хранится все это в схеме **pg_toast**. Временные - в **pg_toast_temp_N**.
+
+Есть несколько стратегий по работе с выносимыми данными.
+Посмотреть текущее состояние колонок можно через
+```
+\d+ tablename
+```
+в столбце Storage.
+
+##### Стратегии
+
+* plane - toast не применяется
+* extended - применяется сжатие и вынос
+* external - сжатие при выносе не используется
+* main - обработка происходит в последнюю очередь
+
+Т.е. если мы хотим оставить поля в строке, то необходимо пометить их стратегией main.
+
+##### Изменение стратегии
+```
+ALTER TABLE t ALTER COLUMN c SET STORAGE EXTERNAL;
+```
 
 
 
