--- a/001 Администрирование/010 Задачи администрирования/Полезные скрипты.md
+++ b/001 Администрирование/010 Задачи администрирования/Полезные скрипты.md
@@ -55,6 +55,19 @@ pg_table_size - таблица + toast
 pg_indexes_size - только индексы
 pg_total_relation_size - все вместе
 ```
+#### Размер базы
+Сумма таблиц
+```
+SELECT sum(pg_total_relation_size(oid))
+FROM pg_class
+WHERE NOT relisshared -- локальные объекты базы
+AND relkind = 'r';  -- обычные таблицы
+```
+Функция размера базы
+```
+SELECT pg_database_size('data_lowlevel');
+```
+Размеры будут отличаться, т.к. вторая функция возвращает размер каталога файловой системы, а в этом каталоге находятся несколько служебных файлов.
 ## PSQL
 ```
 \d object_name -- общая информация по объекту
