--- a/001 Администрирование/002 Структура данных/Табличные пространства.md
+++ b/001 Администрирование/002 Структура данных/Табличные пространства.md
@@ -1,4 +1,5 @@
 [Презентация](https://www.youtube.com/watch?v=uPfM74fKm9o&list=PLaFqU3KCWw6LPcuYVymLcXl3muC45mu3e&index=11)
+[Материалы](https://edu.postgrespro.ru/dba1-13/dba1_11_data_lowlevel.html)
 ## Общее
 Табличные пространства - способ физической организации данных. Каталог, находящейся где-либо на файловой системе.
 #### Табличное пространство pg_global
