--- a/001 Администрирование/010 Задачи администрирования/Мониторинг.md
+++ b/001 Администрирование/010 Задачи администрирования/Мониторинг.md
@@ -1,1 +1,18 @@
+[Презентация](https://www.youtube.com/watch?v=ZkjdLhENuso&list=PLaFqU3KCWw6LPcuYVymLcXl3muC45mu3e&index=13)
+[Материалы](https://edu.postgrespro.ru/dba1-13/dba1_12_admin_monitoring.html)
+[Документация](https://postgrespro.ru/docs/postgresql/13/monitoring-stats)
+## Общие замечания
+Сбором статистики занимается фоновый процесс stats collector. 
+Каждый обслуживающий процесс собирает необходимую статистикув рамках каждой выполняемой транзакции. 
+Затем эта статистика передается процессу-коллектору. 
+Коллектор собирает и агрегирует статистику со всех обслуживающих процессов. 
+Раз в полсекунды коллектор сбрасывает статистику во временные файлы в каталог **PGDATA/pg_stat_tmp**. 
+> Перенесение этого каталога в файловую систему в памяти может положительно сказаться на производительности
 
+Статистика сохраняется при перезапуске сервера. 
+> Обнуление счетчиков происходит по команде администратора, а также при восстановлении сервера после сбоя.
+
+## Мониторинг ОС
+iostat, vmstat, sar, top и др.
+
+## Мониторинг PG
