--- a/001 Администрирование/010 Задачи администрирования/Мониторинг.md
+++ b/001 Администрирование/010 Задачи администрирования/Мониторинг.md
@@ -12,6 +12,10 @@
 Статистика сохраняется при перезапуске сервера. 
 > Обнуление счетчиков происходит по команде администратора, а также при восстановлении сервера после сбоя.
 
+При нормальном выключении сервера (с контрольной точкой и дампом буфера на диск) статистика из временных файлов переносится в постоянное хранилище **PGDATA/pg_stat/**.
+
+> С 15 версии процесса stats collector больше нет. Обслуживающие процессы пишут непосредственно в специально отведенный раздел памяти. При выключении также происходит дамп содержимого буфера на диск.
+
 ## Мониторинг ОС
 iostat, vmstat, sar, top и др.
 
