--- a/001 Администрирование/010 Задачи администрирования/Полезные скрипты.md
+++ b/001 Администрирование/010 Задачи администрирования/Полезные скрипты.md
@@ -6,6 +6,11 @@
 \dt employees
 \unset ECHO_HIDDEN
 ```
+#### Включение сьора статистики вввода-вывода
+```
+ALTER SYSTEM SET track_io_timing=on;
+select pg_reload_conf();
+```
 ## Макросы
 #### Приведение к типу regclass
 ```
