--- a/001 Администрирование/010 Задачи администрирования/Полезные скрипты.md
+++ b/001 Администрирование/010 Задачи администрирования/Полезные скрипты.md
@@ -6,7 +6,7 @@
 \dt employees
 \unset ECHO_HIDDEN
 ```
-#### Включение сьора статистики вввода-вывода
+#### Включение сбора статистики вввода-вывода
 ```
 ALTER SYSTEM SET track_io_timing=on;
 select pg_reload_conf();
