--- a/001 Администрирование/010 Задачи администрирования/Мониторинг.md
+++ b/001 Администрирование/010 Задачи администрирования/Мониторинг.md
@@ -24,3 +24,29 @@ select pg_stat_reset();
 iostat, vmstat, sar, top и др.
 
 ## Мониторинг PG
+#### Статистика ввода-вывода
+```
+ALTER SYSTEM SET track_io_timing=on;
+select pg_reload_conf();
+
+pgbench -i dbname -- начальная инициализация
+
+select pg_stat_reset(); -- сброс статистики
+select pg_stat_reset_shared('bgwriter'); -- статистика, связанная с работой фоновых процессов
+
+pg_bench -T 10 dbname
+
+select * from pg_stat_all_tables where relid = 'pgbench_accoubts'::regclass \gx -- количество операций ввода-вывода
+select * from pg_statio_all_tables where relid = 'pgbench_accoubts'::regclass \gx -- в страницах
+select * from pg_stat_all_indexes where relid = 'pgbench_accoubts'::regclass \gx -- количество операций ввода-вывода
+select * from pg_statio_all_indexes where relid = 'pgbench_accoubts'::regclass \gx -- в страницах
+```
+
+
+
+
+
+
+
+
+
