--- a/001 Администрирование/010 Задачи администрирования/Полезные скрипты.md
+++ b/001 Администрирование/010 Задачи администрирования/Полезные скрипты.md
@@ -90,3 +90,20 @@ SELECT pg_database_size('data_lowlevel');
 \dt employees
 \unset ECHO_HIDDEN
 ```
+## Тестирование
+```
+pgbench -i dbname -- начальная инициализация
+
+select pg_stat_reset(); -- сброс статистики
+select pg_stat_reset_shared('bgwriter'); -- статистика, связанная с работой фоновых процессов
+
+pg_bench -T 10 dbname
+
+select * from pg_stat_all_tables where relid = 'pgbench_accoubts'::regclass \gx -- количество операций ввода-вывода
+select * from pg_statio_all_tables where relid = 'pgbench_accoubts'::regclass \gx -- в страницах
+select * from pg_stat_all_indexes where relid = 'pgbench_accoubts'::regclass \gx -- количество операций ввода-вывода
+select * from pg_statio_all_indexes where relid = 'pgbench_accoubts'::regclass \gx -- в страницах
+```
+
+
+
