--- a/001 Администрирование/010 Задачи администрирования/Мониторинг.md
+++ b/001 Администрирование/010 Задачи администрирования/Мониторинг.md
@@ -38,8 +38,12 @@ pg_bench -T 10 dbname
 
 select * from pg_stat_all_tables where relid = 'pgbench_accoubts'::regclass \gx -- количество операций ввода-вывода
 select * from pg_statio_all_tables where relid = 'pgbench_accoubts'::regclass \gx -- в страницах
+-- Можно использовать для мониторинга использования индексов, минимальные или нулевые сканирования говорят о неиспользовании
 select * from pg_stat_all_indexes where relid = 'pgbench_accoubts'::regclass \gx -- количество операций ввода-вывода
 select * from pg_statio_all_indexes where relid = 'pgbench_accoubts'::regclass \gx -- в страницах
+-- Общие семантические варианты использования вышеперечисленных функций
+_all_ _system_ _user_
+
 ```
 
 
